<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">朋友仓</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_mail">邮箱</string>
    <string name="user_pass">密码</string>
    <string name="loging">登录</string>
    <string name="register">注册</string>
    <string name="search">查找</string>
    <string name="menu_search">查找</string>
	<!-- download -->
    <string name="cannot_down_load">没有可下载的通讯录</string>
    
    
    
    
    <!-- Message -->
    <string name="friend_list">好友列表</string>
    <string name="frined">好友</string>
    <string name="frined_info">好友信息更新</string>
    <string name="upload">上传</string>
    <string name="Download">下载</string>
    <string name="readyDownload">准备下载中</string>
    <string name="finishDownload">下载成功</string>
    <string name="finish">完成:"</string>
    <string name="uploading">正在上传</string>
    <string name="upload_finish">上传成功</string>
    <string name="loading">正在载入</string>
    <string name="call">拨打电话</string>
    <string name="send_SMS">发送短信</string>
    <string name="friend_update">好友信息更新</string>
    <string name="msg_update">消息更新</string>
    <string name="add_friend">添加朋友</string>
    <string name="continue_e">完成</string>
    <string name="Recommended_Friends">好友请求</string>
    <string name="back">返回</string>
    <string name="feed_back">反馈</string>
    <string name="add_contact">添加好友</string>
    <string name="alert">提示</string>
    <string name="infomation_change">好友信息更新</string>
    <string name="nicheng">昵称</string>
    <string name="mobile">手机</string>
    <string name="home">家庭电话</string>
    <string name="qq">QQ   </string>
    <string name="email">Email</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="update">更新</string>
    <string name="logout">注销</string>
    <string name="error">服务器忙,请稍后再試</string>
    <string  name="error_net">网络连接错误</string>
    <string name="sure_upload">确定上传通讯录到云端？</string>
    <string name="sure_download">确定从云端下载通讯录到本地吗？</string>
    <string name="title_error">错误</string>
    <string name="please_wait">请稍等</string>
    <string name="searcging">查找中</string>
    <string name="unlogin">正在注销</string>
    <string name="registering">正在注册</string>
    <string name="updataing">正在更新</string>
    <string name="finish_update">更新成功</string>
    <string name="is_loging">正在登录</string>
    <string name="profile_warm">如果想让你的好友及时知道你变动的号码，修改后请点击更新。</string>
    <string name="alert_change">没有任何可更新的内容</string>
    <string name="alert_mobile_length">手机号码长度必需为11位</string>
    <string name="alert_password_leng">密码长度不能少于8位</string>
    <string name="alert_password_too_long">密码长度不能多于30位</string>
    <string name="alert_password_same">确认密码和密码不一致</string>
    <string name="alery_mail_err">邮箱格式不正确</string>
    <string name="sure_logout">确定需要注销吗？</string>
    <string name="about_us">关于我们</string>
    <string name="current_version">当前版本号 :V.0.1</string>
    <string name="intro_company">浙江网新恒天软件有限公司 版权所有@</string>
    <string name="intro_company_en">copyright@2012 恒天soft.com All Right Reserved</string>

    <!-- login -->

    <string name="all_null">邮箱和密码不能为空</string>
    <string name="alert_account_null">邮箱不能为空</string>
    <string name="alert_passwod_null">密碼不能为空</string>

    <!-- frined -->
    <string name="cannot_add_self_friend">不能加自己为好友</string>
	<string name="must_input_email">必须输入邮箱地址</string>
	<string name="alerdy_send">已发送</string>
	<string name="phone_number_too_long">电话号码长度不能多于20位</string>
	<string name="name_cant_be_null">昵称不能为空</string>
	<string name="cant_not_found">邮箱不存在</string>
	
	<string name="phone_cant_be_null">手机号码不能为空</string>
	<string name="home_cant_be_null">家庭电话号码不能为空</string>
</resources>