<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/launch"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="100dip"
        android:layout_height="150dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:background="@drawable/aboutlogo"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="185dip"
        android:layout_height="36dip"
        android:layout_below="@id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:background="@drawable/about_edit" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/current_version"
            android:textColor="#8AC8F1"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/intro_company"
            android:textColor="#044877" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_intro"
            android:layout_centerHorizontal="true"
            android:text="@string/intro_company_en"
            android:textColor="#044877" />
    </RelativeLayout>

</RelativeLayout>